Changelog
=========

0.2 (Unreleased)
----------------

0.1 (2010-02-16)
----------------

- Initial release