@@ -3,5 +3,6 @@
 
     <five:registerPackage package="." />
     <include file="profiles.zcml" />
+    <include package=".browser" />
 
 </configure>
